fixed layout issues

--- a/src/components/EmpComponent/empComponent.css
+++ b/src/components/EmpComponent/empComponent.css
@@ -1,6 +1,8 @@
 #user {
   font-size: 30px;
   float: left;
+  margin-left: -5%;
+  margin-right: 15%;
 }
 
 #logout {
@@ -143,6 +145,7 @@
   margin-bottom: -4%;
   color: #ef9228;
   font-size: 30px;
+  margin-left: -7%;
 }
 
 #search_results {
